ensure about image resizes correctly on tablet

--- a/_sass/modules/_about.scss
+++ b/_sass/modules/_about.scss
@@ -67,7 +67,15 @@
     object-position: top;
     padding-left: 20px;
 
-    @include media($tablet) {
+    @include media(616px) {
+      float: none;
+      width: 100%;
+      height: auto;
+      padding-left: 0;
+      max-height: 500px;
+    }
+
+    @include media($phone) {
       float: none;
       width: 100%;
       height: auto;
