--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -366,7 +366,17 @@
   padding-left: 20px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 616px) {
+  .about-img, .about-container img {
+    float: none;
+    width: 100%;
+    height: auto;
+    padding-left: 0;
+    max-height: 500px;
+  }
+}
+
+@media (max-width: 480px) {
   .about-img, .about-container img {
     float: none;
     width: 100%;
